--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,17 @@ Summary of changes to citeproc-js since version 1.0.0 release.
 
 
 ==========================
+Changes in version 1.0.436
+==========================
+
+------------------------------------
+Mishandled or unimplemented features
+------------------------------------
+
+- Fix is-numeric conditional to test false against
+  an empty variable.
+
+==========================
 Changes in version 1.0.435
 ==========================
 
