--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,17 @@ Summary of changes to citeproc-js since version 1.0.0 release.
 
 
 ==========================
+Changes in version 1.0.442
+==========================
+
+------------------------------------
+Mishandled or unimplemented features
+------------------------------------
+
+- Fix bug affecting punctuation-in-quote. Thanks to
+  @adamsmith and @tipichris for reporting the fault.
+
+==========================
 Changes in version 1.0.441
 ==========================
 
