--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,13 @@ Summary of changes to citeproc-js since version 1.0.0 release.
 
 
 ==========================
+Changes in version 1.0.448
+==========================
+
+- Do not capitalise the first character of an in-text
+  citation.
+
+==========================
 Changes in version 1.0.447
 ==========================
 
