--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,13 @@
 Summary of changes to citeproc-js since version 1.0.0 release.
 
 ==========================
+Changes in version 1.0.476
+==========================
+
+- Separate main title from journals etc in language configuration
+  control interface.
+
+==========================
 Changes in version 1.0.475
 ==========================
 
