--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Summary of changes to citeproc-js since version 1.0.0 release.
 
 ==========================
+Changes in version 1.0.478
+==========================
+
+- Use meaningful logic for number of volumes and number of pages.
+
+==========================
 Changes in version 1.0.477
 ==========================
 
