--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,14 @@
 Summary of changes to citeproc-js since version 1.0.0 release.
 
 ==========================
+Changes in version 1.0.482
+==========================
+
+- Avoid reconfiguring all tested locales from XML source
+  every time the new "locale" condition is invoked as a
+  normal conditional.
+
+==========================
 Changes in version 1.0.481
 ==========================
 
