--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,13 @@
 Summary of changes to citeproc-js since version 1.0.0 release.
 
 ==========================
+Changes in version 1.0.491
+==========================
+
+- Check the shortTitle field, and require a match as a
+  precondition of parallel merging.
+
+==========================
 Changes in version 1.0.490
 ==========================
 
