--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,13 @@
 Summary of changes to citeproc-js since version 1.0.0 release.
 
 ==========================
+Changes in version 1.0.503
+==========================
+
+- Generate sort keys using the layout's master locale for
+  localised terms.
+
+==========================
 Changes in version 1.0.502
 ==========================
 
