--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,13 @@
 Summary of changes to citeproc-js since version 1.0.0 release.
 
 ==========================
+Changes in version 1.0.504
+==========================
+
+- Assure that the locale set on CSL-m specific default-locale-sort
+  attribute is always configured in the processor locale.
+
+==========================
 Changes in version 1.0.503
 ==========================
 
