--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,13 @@
 Summary of changes to citeproc-js since version 1.0.0 release.
 
 ==========================
+Changes in version 1.0.514
+==========================
+
+- Fix newly introduced bug triggered by name-as-sort-order on
+  cs:style-options.
+
+==========================
 Changes in version 1.0.513
 ==========================
 
